list projects endpoint
